<resources>
    <string name="app_name">Personas</string>
    <string name="Titulos">REGSITRO</string>
    <string name="nombre">Nombre</string>
    <string name="Apellido">Apellido</string>
    <string name="edad">Edad</string>
    <string name="Leer">Leer</string>
    <string name="Bailar">Bailar</string>
    <string name="Programar">Programar</string>
    <string name="Registrar">Registrar</string>
    <string name="Borrar">Borrar</string>
    <string name="No">No.</string>
    <string name="pasa_tiempos">Pasa_Tiempos</string>
    <string name="Listar">Listar</string>
    <string name="Mostar">Listar</string>
    <string name="mensaje">Persona_Registrada_Exitosamente</string>
    <string-array name="opciones">
        <item>@string/Registrar</item>
        <item>@string/Mostar</item>
        <item>@string/Listar</item>
    </string-array>
</resources>
